Fix/challenge (#25)
* fix: success 코드 수정

* fix: API 실행 확인

* fix: boolean null 문제 해결

* fix: 버그 수정

* fix: 버그 수정